# C_Playground

./: .gitignore  coding_standards.h
Essentials/: main  main.c
Essentials/Arrays/Array ADT/Array ADT/: main.c
Essentials/Arrays/Array ADT/Array ADT.xcodeproj/: project.pbxproj
Essentials/Arrays/arrays/arrays/: main.c
Essentials/Arrays/arrays/arrays.xcodeproj/: project.pbxproj
Essentials/Arrays/input_output/: temp.txt
Essentials/Arrays/input_output/input_output.xcodeproj/: project.pbxproj
Essentials/basic_math problems/: README.md  runme
Essentials/basic_math problems/header/: functions.h
Essentials/basic_math problems/src/: main.c  runme
Essentials/binary_convert/binary_convert/: main.c
Essentials/binary_convert/binary_convert.xcodeproj/: project.pbxproj
Essentials/deepscanninf_directory/deepscanninf_directory/: main.c
Essentials/deepscanninf_directory/deepscanninf_directory.xcodeproj/: project.pbxproj
Essentials/input/: userInput.c
Pointers/: CMakeLists.txt  README.md
Pointers/1_Pointers_and_Memory/: main  main.c
Pointers/2_Dynamic_Memory_Management_In_C/: main  main.c
Pointers/3_Pointers_And_Functions/: main  main.c
Pointers/4_Pointers_And_Arrays/: main  main.c  main.h
Pointers/5_Pointers_And_Strings/: main  main.c
Pointers/6_Pointers_And_Structures/: main  main.c
Pointers/7_Security_Issues_And_Improper_Use_Of_Pointers/: main  main.c
Pointers/8_Odds_And_Ends/: main  main.c
Processes/Processes/: main.c
Processes/Processes.xcodeproj/: project.pbxproj
Reference_Cheat_Sheet/: CMakeLists.txt  main.c
(+20 files in other folders)
